Fix alignment

--- a/server/static/css/base.css
+++ b/server/static/css/base.css
@@ -51,7 +51,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	/* justify-content: center; */
 }
 
 .main {
@@ -60,7 +60,8 @@ body {
 	border-radius: 20px;
 	background-color: var(--card-main);
 	box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.1);
-
+	position: relative;
+	top: 20%;
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -72,6 +73,8 @@ body {
 	width: 360px;
 	min-height: 360px;
 	background-color: var(--card);
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .main-error {
@@ -216,7 +219,7 @@ table tr:nth-of-type(2n) {
 	width: 88%;
 	top: 4%;
 	left: 6;
-	position: absolute;
+	position: fixed;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -225,6 +228,7 @@ table tr:nth-of-type(2n) {
 	background-color: rgba(0, 0, 0, 0.15);
 	box-shadow: 0px 3px 8px 2px rgba(0, 0, 0, 0.09);
 	overflow: hidden;
+	z-index: 10;
 }
 
 .header .btn {
